--- a/src/Components/Card/cardStyle.css
+++ b/src/Components/Card/cardStyle.css
@@ -1,3 +1,16 @@
-body .ui.cards > .card {
-  box-shadow: none;
+i {
+  margin-right: 6px;
+  color: black;
+  font-size: 16px;
+}
+
+span {
+  margin-right: 34px;
+}
+
+.card__container {
+  margin: 20px auto 0px auto;
+  border: 1px solid black;
+  width: 600px;
+  padding: 25px;
 }
