--- a/src/Components/Comment/CommentBox/commentBoxStyle.css
+++ b/src/Components/Comment/CommentBox/commentBoxStyle.css
@@ -1,4 +1,16 @@
 form {
   margin: 10px auto 0px auto;
-  width: 600px;
+  padding: 10px;
+  width: 590px;
+  background-color: #e9ebee;
+  border-radius: 4px;
+}
+
+#comment-box__input {
+  border-radius: 4px;
+}
+
+#comment-box__button {
+  border-radius: 4px;
+  font-size: 12px;
 }
