--- a/src/Components/Comment/CommentList/commentListStyle.css
+++ b/src/Components/Comment/CommentList/commentListStyle.css
@@ -1,4 +1,6 @@
 .comment__list {
-  margin: 10px auto 0px auto;
-  width: 600px;
+  margin: 0px auto 0px auto;
+  width: 590px;
+  background-color: #e9ebee;
+  padding: 10px;
 }
